style: add html structure, colors and images

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
 :root{
     --primary-color: #ffde59;
     --second-color: #ffbd59;
+    --font-one : 'Londrina Solid', sans-serif;
+    --font-thwo: 'Racing Sans One', sans-serif;
+    --open-sand : 'Open Sans', sans-serif;
+
 }
