--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,7 +75,7 @@ label{
     font-size: 1.4rem;
     font-family: 'Open Sans', sans-serif;
 }
-.name, .tel{
+.name, .tel, .e-mail{
     height: 2.4rem;
     font-size: 1.4rem;
     padding: 0.7rem 1rem;
@@ -128,7 +128,7 @@ label{
     label{
         font-size: 1.8rem;
     }
-    .tel, .name{
+    .tel, .name, .e-mail{
         height: 4rem;
         border-radius: 20px;
         font-size: 1.8rem;
